export const LoserScreenSelectors = {
    BackHomeButton: 'loser-screen-back-home-button',
    MistakesValue: 'loser-screen-mistakes-value',
    PlayAgainButton: 'loser-screen-play-again-button',
    ProgressValue: 'loser-screen-progress-value',
    Root: 'loser-screen',
    TimeValue: 'loser-screen-time-value',
    UkraineCta: 'loser-screen-ukraine-cta'
} as const;
