export enum HomeScreenHellCardSelectors {
    Root = 'HomeScreenHellCardSelectors.Root',
    Start = 'HomeScreenHellCardSelectors.Start',
    Count = 'HomeScreenHellCardSelectors.Count'
}
