export enum MainTabSelectors {
    Play = 'MainTabSelectors.Play',
    Daily = 'MainTabSelectors.Daily',
    Stats = 'MainTabSelectors.Stats',
    Settings = 'MainTabSelectors.Settings'
}

