...

    return (
        <View style={styles.panel}>
            <View style={styles.header}>
                <View style={styles.difficultySummary}>
                    <BlackText style={titleStyles}>
                        <Trans>Difficulty</Trans>
                    </BlackText>
                </View>
            </View>

            <DifficultyComplexityRail
                difficulty={difficulty}
...
