export enum SettingsScreenSelectors {
    Root = 'SettingsScreenSelectors.Root',
    CellSpacingOption = 'SettingsScreenSelectors.CellSpacingOption',
    ComfortModeSection = 'SettingsScreenSelectors.ComfortModeSection',
    ComfortModeSwitch = 'SettingsScreenSelectors.ComfortModeSwitch',
    DarkModeSwitch = 'SettingsScreenSelectors.DarkModeSwitch',
    MotionOption = 'SettingsScreenSelectors.MotionOption',
    CalmModeSwitch = 'SettingsScreenSelectors.CalmModeSwitch',
    ThemeOption = 'SettingsScreenSelectors.ThemeOption'
}

