export enum PrivacyPolicyScreenSelectors {
    Root = 'PrivacyPolicyScreenSelectors.Root'
}
