export enum SharedScreenSelectors {
    CancelButton = 'SharedScreenSelectors.CancelButton',
    ConfirmButton = 'SharedScreenSelectors.ConfirmButton',
    Meta = 'SharedScreenSelectors.Meta',
    Root = 'SharedScreenSelectors.Root'
}
