export enum WinnerScreenSelectors {
    HomeButton = 'WinnerScreenSelectors.HomeButton',
    MistakesValue = 'WinnerScreenSelectors.MistakesValue',
    PlayAgainButton = 'WinnerScreenSelectors.PlayAgainButton',
    Root = 'WinnerScreenSelectors.Root',
    TimeValue = 'WinnerScreenSelectors.TimeValue',
    UkraineSupportCta = 'WinnerScreenSelectors.UkraineSupportCta'
}
