appId: ${APP_ID}
---
- startRecording:
      path: '13.hell-start-consume'
      optional: true

- runFlow: subflows/navigation/launch-home.flow.yaml
- runFlow: subflows/hell/seed-hell-queue.flow.yaml
- scrollUntilVisible:
      element:
          id: 'HomeScreenHellCardSelectors.Start'
      direction: DOWN
      timeout: 3000
- scroll
- tapOn:
      id: 'HomeScreenHellCardSelectors.Start'
- extendedWaitUntil:
      visible:
          id: 'GameScreenSelectors.Root'
      timeout: 15000
- assertNotVisible:
      id: 'HomeScreenSelectors.Root'
- assertVisible:
      id: 'CellSelectors\.Cell\..*'
- assertVisible:
      id: 'AvailableValueItemSelectors\.Button\..*'
- runFlow: subflows/game/quit-current-game.flow.yaml
- assertNotVisible:
      id: 'HomeScreenHellCardSelectors.Root'
- stopApp
