appId: ${APP_ID}
---
- startRecording:
      path: '14.hell-single-flight-start'
      optional: true

- runFlow: subflows/navigation/launch-home.flow.yaml
- runFlow: subflows/hell/seed-hell-queue.flow.yaml
- scrollUntilVisible:
      element:
          id: 'HomeScreenHellCardSelectors.Start'
      direction: DOWN
      timeout: 3000
- scroll
- tapOn:
      id: 'HomeScreenHellCardSelectors.Start'
      repeat: 5
      delay: 50
- extendedWaitUntil:
      visible:
          id: 'GameScreenSelectors.Root'
      timeout: 15000
- runFlow: subflows/game/quit-current-game.flow.yaml
- assertNotVisible:
      id: 'HomeScreenHellCardSelectors.Root'
- stopApp
